--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
     "development":{
         "username":"root",
-        "password":"root",
+        "password":"password",
         "database":"building_chain",
         "host":"localhost",
         "dialect":"mysql"
